# GenLab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ai/: architecture.md  changelog_architecture.md  coding_rules.md  current_focus.md  decisions.md  project_context.md  roadmap.md
configs/: default.yaml
configs/environments/: colab.yaml  local.yaml
configs/models/: cogvideo.yaml  flux.yaml  ltx.yaml  sdxl.yaml  ssd1b.yaml  wan.yaml
configs/profiles/: balanced.yaml  high_quality.yaml  low_vram.yaml
docs/: bootstrap.md  pipeline.md  providers.md  tasks.md
notebooks/: benchmark_speed.ipynb  launcher.ipynb  test_ltx_video.ipynb
src/genlab/: __init__.py  genlab.py
src/genlab/assets/: __init__.py  inspector.py  manager.py
src/genlab/config/: __init__.py  loader.py  schema.py
src/genlab/core/: __init__.py  bootstrap.py  environment.py  exceptions.py  hardware.py  paths.py
src/genlab/models/: __init__.py  base.py  manager.py  registry.py
src/genlab/models/impl/: cogvideo.py  flux.py  ltx.py  sdxl.py  ssd1b.py  wan.py
src/genlab/pipeline/: __init__.py  orchestrator.py  steps.py
src/genlab/services/: __init__.py  exporter.py  huggingface.py
src/genlab/storage/: __init__.py  local.py
src/genlab/tasks/: __init__.py  base.py  registry.py  text_to_image.py  text_to_video.py
src/genlab/utils/: watchdog.py
tests/: conftest.py  test_assets_inspector.py  test_assets_manager.py  test_config.py  test_config_env.py  test_core.py  test_discovery.py  test_exporter.py  test_models.py  test_pipeline.py
