[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genlab"
version = "0.1.0"
description = "Plataforma modular para ejecutar modelos open source de IA en Colab"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=0.20.0",
    "hf_transfer>=0.1.6",
]
video = [
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
]
all = [
    "genlab[gpu,video]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genlab = ["py.typed"]
